tests/ui/consts/issue-76064.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/issue-76064.rs:1:17
   |
LL | struct Bug([u8; panic!("panic")]);
   |                 ^^^^^^^^^^^^^^^ evaluation panicked: panic

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
